# vettid-desktop

./: .gitignore  CLAUDE.md  CONNECTIONS-REWORK-PLAN.md  DATA-SECRETS-ADD-PLAN.md  DESKTOP-REWORK-PLAN.md  DEVELOPMENT-PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: fetch-guest-creds.sh  install-dev-desktop-entry.sh  install-local.sh
src/: App.svelte  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: auth.rs  calls.rs  mod.rs  session.rs  vault.rs
src-tauri/src/credential/: keystore.rs  mod.rs  store.rs
src-tauri/src/crypto/: argon2.rs  call_key.rs  ecies.rs  encrypt.rs  frame_cryptor.rs  hkdf.rs  keys.rs  mod.rs
src-tauri/src/fingerprint/: binary.rs  mod.rs  platform_key.rs  platform_linux.rs  platform_macos.rs
src-tauri/src/nats/: client.rs  listener.rs  messages.rs  mod.rs  operations.rs
src-tauri/src/registration/: flow.rs  mod.rs  pairing.rs  shortlink.rs
src-tauri/src/session/: capabilities.rs  delegation.rs  heartbeat.rs  manager.rs  mod.rs
src-tauri/src/webrtc/: audio.rs  cryptor.rs  mod.rs  session.rs  turn.rs
src/lib/: aliasGroups.ts  connectionName.ts  diag.ts  events.ts  grants.ts  notifications.ts  personalDataTemplates.ts  secretTemplates.ts  time.ts  types.ts
src/lib/actions/: modal.ts
src/lib/components/: Avatar.svelte  CallOverlay.svelte  ConfirmDialog.svelte  DataGrantApprovalModal.svelte  DataTemplateFormSheet.svelte  PendingApproval.svelte  SecretTemplateFormSheet.svelte  SensitiveDataChip.svelte  SessionTimer.svelte  StatusBar.svelte  StatusChip.svelte  TemplateChooserSheet.svelte  TopBar.svelte
src/lib/config/: features.ts
src/lib/stores/: calls.ts  nats.ts  navigation.ts  secrets.ts  session.ts  theme.ts  vault.ts
src/lib/views/: Connections.svelte  Pairing.svelte  Session.svelte  SessionExpired.svelte  Settings.svelte  Sharing.svelte  Vault.svelte
src/lib/views/vault/: ConnectionDetail.svelte  ConnectionHistory.svelte  ConnectionSharing.svelte  ConnectionWorkspace.svelte  ConnectionsList.svelte  Conversation.svelte  DevicesView.svelte  FeedView.svelte  MessagingView.svelte  PersonalData.svelte  ProfileView.svelte  Secrets.svelte  SecretsView.svelte  VotingView.svelte  WalletView.svelte  Wallets.svelte
src/lib/views/vault/wallet/: ReceiveBtcSheet.svelte  RequestPaymentSheet.svelte  SendBtcSheet.svelte
