[package]
name = "vettid-desktop"
version = "0.1.0"
edition = "2021"
description = "VettID Desktop Client"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# NATS
async-nats = "0.37"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Hex encoding
hex = "0.4"

# Base64
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Platform / filesystem
hostname = "0.4"
dirs = "5"
serde_bytes = "0.11"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
